# seqan_sandbox

./: CMakeLists.txt  a.out  argument_parser.cpp  barcode_extract.cpp  install_setup.txt  read_io.cpp  test2.fq
